--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </form>
 
   <p style="margin-top:20px; font-size:12px; opacity:0.8;">
-    Dibuat oleh kamu 💚
+    thdx
   </p>
 </body>
 </html>
