--- a/index.html
+++ b/index.html
@@ -4,147 +4,226 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🚀 LayerZero OFT • Mini UI</title>
-
-  <!-- Font modern -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
   <meta name="theme-color" content="#0b1220">
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
   <style>
     :root{
-      --bg-1:#0b1220;
-      --bg-2:#0e1628;
-      --card:#121b2f;
-      --text:#e6edf3;
-      --muted:#9aa6b2;
-      --accent:#6ee7ff;
-      --accent-2:#7c5cff;
-      --success:#22c55e;
-      --ring: rgba(110,231,255,.35);
+      --bg-1:#0b1220; --bg-2:#0e1628; --text:#e6edf3; --muted:#9aa6b2;
+      --accent:#6ee7ff; --accent-2:#7c5cff; --ring:rgba(110,231,255,.35); --success:#22c55e; --warn:#f59e0b; --err:#ef4444;
+      --card: rgba(255,255,255,.03); --stroke: rgba(255,255,255,.08);
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{box-sizing:border-box} html,body{height:100%}
     body{
-      margin:0;
-      font-family:Inter,system-ui,Arial,Helvetica,sans-serif;
-      color:var(--text);
+      margin:0; font-family:Inter,system-ui,Arial,sans-serif; color:var(--text);
       background:
         radial-gradient(1200px 600px at -10% -10%, rgba(124,92,255,.18), transparent 60%),
         radial-gradient(1000px 800px at 110% 10%, rgba(110,231,255,.12), transparent 60%),
         linear-gradient(180deg, var(--bg-1), var(--bg-2));
-      display:flex; align-items:center; justify-content:center;
-      padding:24px;
+      display:flex; align-items:center; justify-content:center; padding:24px;
     }
-    .wrap{width:100%; max-width:760px}
-    .brand{
-      text-align:center; margin-bottom:18px;
-    }
-    .brand .chip{
-      display:inline-flex; gap:8px; align-items:center;
-      padding:8px 12px; border-radius:999px;
-      border:1px solid rgba(255,255,255,.08);
-      background:rgba(255,255,255,.03);
-      font-size:12px; color:var(--muted); letter-spacing:.3px;
-    }
-    .title{
-      text-align:center; margin:18px 0 6px;
-      font-weight:800; font-size:clamp(22px,4.5vw,36px);
-      line-height:1.15;
-      background:linear-gradient(90deg,var(--accent),#fff,var(--accent-2));
-      -webkit-background-clip:text; background-clip:text; color:transparent;
-    }
-    .subtitle{
-      text-align:center; color:var(--muted); margin:0 0 18px; font-size:14px;
-    }
-
-    .card{
-      background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));
-      border:1px solid rgba(255,255,255,.08);
-      border-radius:16px; padding:18px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-      backdrop-filter: blur(6px);
-    }
-    .grid{display:grid; grid-template-columns:1fr; gap:14px}
-    @media (min-width:640px){ .grid{ grid-template-columns:1fr 1fr; } }
-
-    label{display:block; font-size:12px; color:var(--muted); margin-bottom:6px;}
-    .input{
-      width:100%; padding:12px 14px; border-radius:12px;
-      border:1px solid rgba(255,255,255,.08);
-      background:rgba(12,18,30,.6); color:var(--text);
-      outline:none; transition:.2s border, .2s box-shadow, .2s transform;
-    }
-    .input:focus{
-      border-color:var(--accent);
-      box-shadow:0 0 0 6px var(--ring);
-      transform: translateY(-1px);
-    }
+    .wrap{width:100%; max-width:820px}
+    .chip{display:inline-flex; gap:8px; align-items:center; padding:8px 12px; border-radius:999px;
+      border:1px solid var(--stroke); background:var(--card); color:var(--muted); font-size:12px}
+    .title{margin:12px 0 8px; text-align:center; font-weight:800; font-size:clamp(22px,4.5vw,36px);
+      background:linear-gradient(90deg,var(--accent),#fff,var(--accent-2)); -webkit-background-clip:text; background-clip:text; color:transparent}
+    .subtitle{text-align:center; color:var(--muted); margin:0 0 18px; font-size:14px}
+    .card{background:linear-gradient(180deg, var(--card), rgba(255,255,255,.01)); border:1px solid var(--stroke); border-radius:16px; padding:18px; box-shadow:0 10px 30px rgba(0,0,0,.25)}
+    .grid{display:grid; grid-template-columns:1fr; gap:14px} @media (min-width:740px){.grid{grid-template-columns:1fr 1fr}}
+    label{display:block; font-size:12px; color:var(--muted); margin-bottom:6px}
+    .input{width:100%; padding:12px 14px; border-radius:12px; border:1px solid var(--stroke); background:rgba(12,18,30,.6); color:var(--text); outline:none; transition:.2s border,.2s box-shadow,.2s transform}
+    .input:focus{border-color:var(--accent); box-shadow:0 0 0 6px var(--ring); transform:translateY(-1px)}
     .hint{font-size:12px; color:var(--muted); margin-top:6px}
-
-    .actions{display:flex; gap:10px; flex-wrap:wrap; margin-top:14px}
-    .btn{
-      flex:1; min-width:140px; padding:12px 14px; border-radius:12px; border:0;
-      font-weight:700; color:#0b1220; cursor:pointer;
-      background:linear-gradient(90deg,var(--accent),var(--accent-2));
-      box-shadow:0 10px 24px rgba(124,92,255,.25);
-      transition:transform .12s ease, filter .12s ease;
-    }
-    .btn:hover{ transform:translateY(-1px); filter:saturate(1.15) }
-    .btn.secondary{
-      background:transparent; color:var(--text);
-      border:1px solid rgba(255,255,255,.15);
-      box-shadow:none;
-    }
-    .footer{
-      margin-top:16px; text-align:center; color:var(--muted); font-size:12px;
-    }
-    .ok{color:var(--success)}
+    .row{display:flex; gap:10px; flex-wrap:wrap}
+    .btn{flex:1; min-width:140px; padding:12px 14px; border-radius:12px; border:0; font-weight:700; color:#0b1220;
+      background:linear-gradient(90deg,var(--accent),var(--accent-2)); box-shadow:0 10px 24px rgba(124,92,255,.25);
+      transition:transform .12s ease, filter .12s ease; cursor:pointer}
+    .btn:hover{transform:translateY(-1px); filter:saturate(1.15)}
+    .btn.ghost{background:transparent; color:var(--text); border:1px solid var(--stroke); box-shadow:none}
+    .log{margin-top:14px; border:1px dashed var(--stroke); border-radius:12px; padding:12px; background:rgba(12,18,30,.4); font-family:ui-monospace, SFMono-Regular, Menlo, monospace; font-size:12px; text-align:left; white-space:pre-wrap}
+    .ok{color:var(--success)} .warn{color:var(--warn)} .err{color:var(--err)}
+    .foot{margin-top:16px; text-align:center; color:var(--muted); font-size:12px}
   </style>
 </head>
 <body>
-  <main class="wrap">
-    <div class="brand">
-      <span class="chip">🧪 Sepolia → Stable (EID 40374)</span>
+<main class="wrap">
+  <div style="text-align:center"><span class="chip">🧪 Sepolia → Stable (EID 40374)</span></div>
+  <h1 class="title">LayerZero OFT — Mini UI</h1>
+  <p class="subtitle">Approve → Quote Fee → Send. Dibuat agar nyaman dipakai di HP.</p>
+
+  <section class="card">
+    <div class="grid" style="margin-bottom:8px">
+      <div>
+        <label>Alamat Tujuan (EVM)</label>
+        <input class="input" id="toAddr" placeholder="0x…" autocomplete="off" />
+        <div class="hint">Akan diubah otomatis ke <code>bytes32</code> saat kirim.</div>
+      </div>
+      <div>
+        <label>Jumlah (LD)</label>
+        <input class="input" id="amountLD" type="number" placeholder="Contoh: 1000000 (≙ 1 USDT @6 desimal)" />
+        <div class="hint">USDT 6 desimal → 1 USDT = <b>1,000,000</b> (LD). Mulai kecil dulu ya.</div>
+      </div>
     </div>
-    <h1 class="title">LayerZero OFT — Mini UI</h1>
-    <p class="subtitle">Kirim token OFT antar-chain dengan tampilan yang lebih rapi dan nyaman di HP.</p>
 
-    <section class="card">
-      <div class="grid">
-        <div>
-          <label>Alamat Tujuan</label>
-          <input class="input" id="addr" placeholder="0x…" autocomplete="off" />
-          <div class="hint">Masukkan alamat EVM. Sistem akan mengubah ke <code>bytes32</code> saat kirim.</div>
-        </div>
-        <div>
-          <label>Jumlah Token (unit LD)</label>
-          <input class="input" id="amount" type="number" placeholder="Contoh: 1000000 (≙ 1 USDT, 6 desimal)" />
-          <div class="hint">Untuk USDT 6 desimal: 1 USDT = <b>1,000,000</b> (LD).</div>
-        </div>
+    <div class="grid" style="margin-bottom:8px">
+      <div>
+        <label>Token (ERC20)</label>
+        <input class="input" id="token" value="0xc4DCC311c028e341fd8602D8eB89c5de94625927" />
+        <div class="hint">USDT0 Sepolia (6 desimal)</div>
       </div>
-
-      <div class="actions">
-        <button class="btn secondary" id="btnCopy">Salin Link DApp</button>
-        <button class="btn" id="btnDummy">Kirim Token</button>
+      <div>
+        <label>OFT Adapter</label>
+        <input class="input" id="adapter" value="0xc099cD946d5efCC35A99D64E808c1430cEf08126" />
+        <div class="hint">Kontrak OFTAdapter</div>
       </div>
+    </div>
 
-      <p id="msg" class="footer">UI ini hanya tampilan. Aksi kirim akan kita sambungkan ke kontrak di langkah berikutnya. <span class="ok">👍</span></p>
-    </section>
+    <div class="grid">
+      <div>
+        <label>Min Receive (%)</label>
+        <input class="input" id="minPct" value="99" />
+        <div class="hint">99 artinya minAmount = 99% dari amount</div>
+      </div>
+      <div>
+        <label>dstEid</label>
+        <input class="input" id="dstEid" value="40374" />
+      </div>
+    </div>
 
-    <p class="footer">thdx • versi tampilan</p>
-  </main>
+    <div class="row" style="margin-top:14px">
+      <button class="btn" id="btnConnect">🔌 Connect</button>
+      <button class="btn ghost" id="btnApprove">✅ Approve</button>
+      <button class="btn ghost" id="btnQuote">💰 Quote Fee</button>
+      <button class="btn" id="btnSend">🚀 Send</button>
+    </div>
 
-  <script>
-    // Sementara tombol hanya demo (untuk tampilan). Nanti kita ganti dengan ethers.js.
-    const msg = document.getElementById('msg');
-    document.getElementById('btnDummy').onclick = () => {
-      msg.innerHTML = '✨ Tombol berfungsi! Selanjutnya kita sambungkan ke kontrak LayerZero (approve → quote → send).';
-    };
-    document.getElementById('btnCopy').onclick = async () => {
-      try{
-        await navigator.clipboard.writeText(location.href);
-        msg.textContent = 'Link dApp disalin ke clipboard.';
-      }catch{ msg.textContent = 'Gagal menyalin link. Salin manual saja.'; }
-    };
-  </script>
+    <div id="log" class="log">Log siap.</div>
+  </section>
+
+  <p class="foot">Dibuat oleh kamu • v1 (connected)</p>
+</main>
+
+<script>
+let provider, signer;
+
+const ERC20_ABI = [
+  "function approve(address spender, uint256 value) returns (bool)",
+  "function allowance(address owner, address spender) view returns (uint256)",
+  "function balanceOf(address) view returns (uint256)",
+  "function decimals() view returns (uint8)"
+];
+const OFT_ABI = [
+  "function quoteSend((uint32,bytes32,uint256,uint256,bytes,bytes,bytes),bool) view returns (uint256 nativeFee,uint256 zroFee)",
+  "function send((uint32,bytes32,uint256,uint256,bytes,bytes,bytes),(uint256,uint256),address) payable"
+];
+
+const $ = (id)=>document.getElementById(id);
+const log = (txt)=>{ const el=$("log"); el.textContent += "\\n" + txt; el.scrollTop = el.scrollHeight; };
+const set = (txt)=>{ $("log").textContent = txt; };
+
+function toBytes32Address(addr){
+  const a = ethers.utils.getAddress(addr).slice(2);
+  return "0x" + a.padStart(64,"0");
+}
+function toBN(x){ return ethers.BigNumber.from(String(x)); }
+function minAmountLD(amountLD, pct){ return toBN(amountLD).mul(pct).div(100); }
+
+async function ensure(){
+  if(!window.ethereum) throw new Error("MetaMask tidak terdeteksi");
+  if(!provider){
+    provider = new ethers.providers.Web3Provider(window.ethereum);
+    await provider.send("eth_requestAccounts", []);
+    signer = provider.getSigner();
+  }
+  const net = await provider.getNetwork();
+  if (String(net.chainId) !== "11155111") {
+    log("⚠️  Kamu di chainId " + net.chainId + ". Pindah ke Sepolia ya.");
+  }
+  return await signer.getAddress();
+}
+
+$("btnConnect").onclick = async() => {
+  try{
+    const me = await ensure();
+    set("✅ Connected as " + me);
+  }catch(e){ set("❌ " + (e.message||e)); }
+};
+
+$("btnApprove").onclick = async() => {
+  try{
+    const me = await ensure();
+    const token = $("token").value.trim();
+    const adapter = $("adapter").value.trim();
+    const amountLD = $("amountLD").value.trim();
+    if(!amountLD) throw new Error("Isi jumlah LD dulu (contoh 1000000).");
+
+    const erc = new ethers.Contract(token, ERC20_ABI, signer);
+    // (opsional) cek decimals:
+    try { const d = await erc.decimals(); log("ℹ️ Token decimals = " + d); } catch {}
+
+    log("Approve " + amountLD + " ke adapter...");
+    const tx = await erc.approve(adapter, amountLD);
+    log("Approve tx: " + tx.hash);
+    await tx.wait();
+    log("✅ Approve confirmed.");
+  }catch(e){ log("❌ Approve error: " + (e.message||e)); }
+};
+
+$("btnQuote").onclick = async () => {
+  try{
+    const me = await ensure();
+    const adapter = $("adapter").value.trim();
+    const toAddr = $("toAddr").value.trim() || me;
+    const amountLD = $("amountLD").value.trim();
+    const pct = Number($("minPct").value.trim() || "99");
+    const dstEid = Number($("dstEid").value.trim());
+
+    if(!amountLD) throw new Error("Isi jumlah LD dulu.");
+    const to32 = toBytes32Address(toAddr);
+    const minLD = minAmountLD(amountLD, pct);
+    const sendParam = { dstEid, to: to32, amountLD, minAmountLD: minLD, extraOptions:"0x", composeMsg:"0x", oftCmd:"0x" };
+    const oft = new ethers.Contract(adapter, OFT_ABI, signer);
+
+    const fee = await oft.quoteSend(sendParam, false);
+    set("💰 nativeFee (wei): " + fee.nativeFee.toString() + "\\n≈ " + ethers.utils.formatEther(fee.nativeFee) + " ETH");
+  }catch(e){ set("❌ Quote error: " + (e.message||e)); }
+};
+
+$("btnSend").onclick = async () => {
+  try{
+    const me = await ensure();
+    const token = $("token").value.trim();
+    const adapter = $("adapter").value.trim();
+    const toAddr = $("toAddr").value.trim() || me;
+    const amountLD = $("amountLD").value.trim();
+    const pct = Number($("minPct").value.trim() || "99");
+    const dstEid = Number($("dstEid").value.trim());
+
+    if(!amountLD) throw new Error("Isi jumlah LD dulu.");
+    const to32 = toBytes32Address(toAddr);
+    const minLD = minAmountLD(amountLD, pct);
+    const sendParam = { dstEid, to: to32, amountLD, minAmountLD: minLD, extraOptions:"0x", composeMsg:"0x", oftCmd:"0x" };
+
+    const oft = new ethers.Contract(adapter, OFT_ABI, signer);
+
+    // cek allowance
+    const erc = new ethers.Contract(token, ERC20_ABI, signer);
+    const allowance = await erc.allowance(me, adapter);
+    if (allowance.lt(toBN(amountLD))) {
+      log("⚠️ Allowance kurang ("+allowance.toString()+"). Klik Approve dulu.");
+      return;
+    }
+
+    const fee = await oft.quoteSend(sendParam, false);
+    const feeParam = { nativeFee: fee.nativeFee, zroFee: 0 };
+
+    set("🚀 Mengirim... msg.value = " + ethers.utils.formatEther(fee.nativeFee) + " ETH");
+    const tx = await oft.send(sendParam, feeParam, me, { value: fee.nativeFee });
+    log("TX: " + tx.hash);
+    await tx.wait();
+    set("✅ Send confirmed. TX: " + tx.hash);
+  }catch(e){ set("❌ Send error: " + (e.message||e)); }
+};
+</script>
 </body>
 </html>
